[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colorblind-async"
version = "0.0.1"
authors = [
  { name="tzolkincz", email="vaclav@happy-robots.cz" },
]
description = "Allows call await from synchronous context"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pytest>=4.2.1",
  "libcst>=0.3.4",
  "nest-asyncio>=1.5.0"
]

[project.optional-dependencies]
tests = [
  'pytest'
]

[project.urls]
"Homepage" = "https://github.com/tzolkincz/colorblind-async"
"Bug Tracker" = "https://github.com/tzolkincz/colorblind-async/issues"
